Supercluster/Cluster01/WebServer003/Deployment.yaml
############################
# @author EliasDH Team     #
# @see https://eliasdh.com #
# @since 01/01/2025        #
############################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver003-frontend-deployment
  namespace: webserver003
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webserver003-frontend
  template:
    metadata:
      labels:
        app: webserver003-frontend
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: role
                    operator: In
                    values:
                      - compute
      imagePullSecrets:
        - name: github-registry
      containers:
        - name: webserver003-frontend-container
          image: "ghcr.io/eliasdhcom/applevelupbe-frontend:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver003-backend-deployment
  namespace: webserver003
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webserver003-backend
  template:
    metadata:
      labels:
        app: webserver003-backend
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: role
                    operator: In
                    values:
                      - compute
      imagePullSecrets:
        - name: github-registry
      containers:
        - name: webserver003-backend-container
          image: "ghcr.io/eliasdhcom/applevelupbe-backend:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver003-mysql-deployment
  namespace: webserver003
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver003-mysql
  template:
    metadata:
      labels:
        app: webserver003-mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: webserver003-mysql-storage
      volumes:
        - name: webserver003-mysql-storage
          persistentVolumeClaim:
            claimName: webserver003-mysql-pvc
---
