Supercluster/Cluster01/WebServer003/Service.yaml
############################
# @author Elias De Hondt   #
# @see https://eliasdh.com #
# @since 24/11/2024        #
############################
---
apiVersion: v1
kind: Service
metadata:
  name: webserver003-service
  namespace: webserver003
spec:
  selector:
    app: webserver003
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
