Supercluster/Cluster01/WebServer003/Ingress.yaml
############################
# @author Elias De Hondt   #
# @see https://eliasdh.com #
# @since 24/11/2024        #
############################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver003-ingress
  namespace: webserver003
  annotations:
    cert-manager.io/issuer: "webserver003-letsencrypt-issuer"
    nginx.ingress.kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true" # Redirect HTTP to HTTPS
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - app.levelup.be
      secretName: applevelup-tls
  rules:
    - host: app.levelup.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webserver003-frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: webserver003-backend-service
                port:
                  number: 3000
---
